--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,12 @@ code {
 
 h1, h2 {
   font-family: 'Shippori Mincho', serif;
+  text-align: center;
+  margin-top: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
