--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
 h2 {
   font-family: 'Shippori Mincho', serif;
   font-family: 'Lato', sans-serif;
+  font-size: 1.8rem;
   color: #ff8a7d;
   text-align: center;
   margin-top: 0;
