--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background-color: #4e4d4a;
   font-family: 'Shippori Mincho', serif;
-  /* font-family: 'Lato', sans-serif; */
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
