--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@500;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -9,8 +10,8 @@
 body {
   margin: 0;
   background-color: #4e4d4a;
-  font-family: 'Shippori Mincho', serif;
-  font-family: 'Lato', sans-serif;
+  /* font-family: 'Shippori Mincho', serif; */
+  font-family: 'Nunito Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -21,7 +22,6 @@ code {
 }
 
 h2 {
-  font-family: 'Shippori Mincho', serif;
   font-family: 'Lato', sans-serif;
   font-size: 1.8rem;
   color: #ff8a7d;
