--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Forum&display=swap');
 
 *, *::before, *::after {
@@ -9,7 +8,7 @@
 
 body {
   margin: 0;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -20,11 +19,10 @@ code {
 }
 
 h3 {
-  font-family: 'Lato', sans-serif;
   font-size: 1.8rem;
   color: #ff8a7d;
   text-align: center;
-  margin-top: 0;
+  margin: 20px 0 10px;
 }
 
 img {
